Animation and journal readability

--- a/content/journal/adaptation-ai.mdx
+++ b/content/journal/adaptation-ai.mdx
@@ -5,6 +5,7 @@ date: "2025-11-05"
 readTime: "11 min read"
 category: "AI & Futures"
 featured: true
+startHere: true
 ---
 
 We are the first generation whose daily tools include systems that learn faster
