--- a/content/journal/anxiety-agency.mdx
+++ b/content/journal/anxiety-agency.mdx
@@ -5,6 +5,7 @@ date: "2025-11-09"
 readTime: "8 min read"
 category: "Inner Systems"
 featured: false
+startHere: true
 ---
 
 Anxiety is, in part, a side effect of having a powerful imagination.
