--- a/content/journal/manifesto.mdx
+++ b/content/journal/manifesto.mdx
@@ -5,6 +5,7 @@ date: "2025-11-01"
 readTime: "9 min read"
 category: "Manifesto"
 featured: true
+startHere: true
 ---
 
 We are born into systems we did not design.
